small changes on home page

--- a/index.html
+++ b/index.html
@@ -72,38 +72,46 @@
         
         <div class="column">
             <div class="welcome-content">
-                <span class="iconify" data-inline="false" data-icon="carbon:collaborate"></span> 
-                <div class="icon-bcg"></div> 
+                <div>
+                    <span class="iconify" data-inline="false" data-icon="carbon:collaborate"></span> 
+                    <div class="icon-bcg"></div> 
+                </div>
                 <div>      
-                <h3>Network of experienced advisors</h3>
-                <p>We collaborate with network of independent and experienced advisors in the whole Denmark</p>
+                    <h3>Network of experienced advisors</h3>
+                    <p>We collaborate with network of independent and experienced advisors in the whole Denmark</p>
                 </div>
             </div>
 
             <div class="welcome-content">
-                <span class="iconify" data-inline="false" data-icon="carbon:document"></span>        
-                <div class="icon-bcg"></div> 
                 <div>
-                <h3>Inpirational articles</h3>
-                <p>You can access relevant articles that will guide you towards the house of your dreams</p>
+                    <span class="iconify" data-inline="false" data-icon="carbon:document"></span>        
+                    <div class="icon-bcg"></div> 
+                </div>
+                <div>
+                    <h3>Inpirational articles</h3>
+                    <p>You can access relevant articles that will guide you towards the house of your dreams</p>
                 </div>
             </div>
         </div>
             <div class="column">
             <div class="welcome-content">
-                <span class="iconify" data-inline="false" data-icon="carbon:star"></span>
-                <div class="icon-bcg"></div> 
                 <div>
-                <h3>Benefits from our partners</h3>
-                <p>Make the right choices, save money and take advantage of many advantages of the benefit club</p>
+                    <span class="iconify" data-inline="false" data-icon="carbon:star"></span>
+                    <div class="icon-bcg"></div> 
+                </div>
+                <div>
+                    <h3>Benefits from our partners</h3>
+                    <p>Make the right choices, save money and take advantage of many advantages of the benefit club</p>
                 </div>
             </div>
             <div class="welcome-content">
-                <span class="iconify" data-inline="false" data-icon="carbon:tool-box"></span>        
-                <div class="icon-bcg"></div> 
                 <div>
-                <h3>Personal desk for our members</h3>
-                <p>We provide our members with their own personal dashboard, so they can gather everything in one place</p>
+                    <span class="iconify" data-inline="false" data-icon="carbon:tool-box"></span>        
+                    <div class="icon-bcg"></div>
+                </div>
+                <div>
+                    <h3>Personal desk for our members</h3>
+                    <p>We provide our members with their own personal dashboard, so they can gather everything in one place</p>
                 </div>
             </div>
         </div>
