--- a/dashboard.html
+++ b/dashboard.html
@@ -592,19 +592,19 @@
             <div class="articles-container">
                 <h3 style="display: inline-block;">Latest articles</h3>
                 <a href="#" style="float: right;">See all articles</a>
-                <div class="articles-flexbox">
-                    <div class="article-example">
-                        <div>
+                
+                    <div id="articles-container" class="article-example">
+                        <!-- <div>
                         <img src="/img/article1.jpg" alt="Article img">
                         </div>
                         <div>
                         <h4>Housing prices in March 2021 set new records</h4>
                         <p>In March 2021, house prices rose again and they are now being traded 12 percent higher than at the...</p><br>
                         <a href="#">Read more</a>
-                        </div>
+                        </div> -->
                     </div>
 
-                    <div class="article-example">
+                    <!-- <div class="article-example">
                         <div>
                         <img src="/img/article4.jpg" alt="Article img">
                         </div>
@@ -635,8 +635,8 @@
                         <p>When you look at older houses, the renovation projects can quickly seem unmanageable ...</p><br>
                         <a href="#">Read more</a>
                         </div>
-                    </div>
-                </div>
+                    </div> -->
+                
             </div>
 
             <!-- gratis services mobile -->
