--- a/dashboard.html
+++ b/dashboard.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Huskobet | Dashboard</title>
+    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
     <meta name="viewport" content="width-device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Huskobet, user dashboard">
     <meta name="author" content="Aleksandra Wytulany">
