small adjustments to the dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,10 +28,11 @@
 
 <!-----top desktop navigation----->
 <div class="header">
+    <li class="only-mobile"><span class="iconify" data-inline="false" data-icon="carbon:help" style="margin-left: 16px;"></span></li>
     <img src="/img/huskobet-white-logo.png" alt="Huskobet white logo">
+    <li class="only-mobile"><span class="iconify" data-inline="false" data-icon="carbon:login" style="margin-right: 16px;"></span></li>
     <ul id="navlist">
       <li id="active">User name</li>
-      <!-- <li><span class="iconify topnav-icon" data-inline="false" data-icon="carbon:event-schedule"></span></li> -->
       <li><span class="iconify topnav-icon" data-inline="false" data-icon="carbon:help"></span></li>
       <li><span class="iconify topnav-icon" data-inline="false" data-icon="carbon:login"></span></li>
     </ul>
@@ -57,9 +58,9 @@
             <p class="date">19/04/2021</p>
             <div class="update">
                 <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
-                <p>Tobias Elmstrøm uploaded new offer regarding Land trade case. Check the offer here or go to the case.<br>
+                <p>Tobias Elmstrøm uploaded new offer regarding Land trade case. Check the offer <span style="font-weight: bold;">here</span> or go to the case.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;">
+                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
                 
             </div>
@@ -67,9 +68,9 @@
             <p class="date">08/04/2021</p>
             <div class="update">
                 <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
-                <p>You have a new message from Tobias Elmstrøm from Land trade case. Click here to see the message or go to the case.<br>
+                <p>You have a new message from Tobias Elmstrøm from Land trade case. Click <span style="font-weight: bold;">here</span> to see the message or go to the case.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;">
+                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
             </div>
 
@@ -77,9 +78,9 @@
             <div class="update">
                 <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
                 <p>You have successfully uploaded a new document to Land trade case. 
-                    Click here to see it.<br>
+                    Click <span style="font-weight: bold;">here</span> to see it.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;">
+                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
             </div>
         </div>
@@ -146,9 +147,9 @@
             <p class="date">19/04/2021</p>
             <div class="update">
                 <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
-                <p>Tobias Elmstrøm uploaded new offer regarding Land trade case. Check the offer here or go to the case.<br>
+                <p>Tobias Elmstrøm uploaded new offer regarding Land trade case. Check the offer <span style="font-weight: bold;">here</span> or go to the case.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;">
+                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
                 
             </div>
@@ -156,9 +157,9 @@
             <p class="date">08/04/2021</p>
             <div class="update">
                 <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
-                <p>You have a new message from Tobias Elmstrøm from Land trade case. Click here to see the message or go to the case.<br>
+                <p>You have a new message from Tobias Elmstrøm from Land trade case. Click <span style="font-weight: bold;">here</span> to see the message or go to the case.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;">
+                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
             </div>
 
@@ -166,9 +167,9 @@
             <div class="update">
                 <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
                 <p>You have successfully uploaded a new document to Land trade case. 
-                    Click here to see it.<br>
+                    Click <span style="font-weight: bold;">here</span> to see it.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;">
+                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
             </div>
         </div>
@@ -343,7 +344,7 @@
                         <div class="message-container">
                             <p class="date">08/04/2021</p>
                             <div class="message-box">
-                                <img src="/img/huskobet-blue-logo.png">
+                                <img src="/img/advisor-img.png">
                                     <div class="message-text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                                         A, felis mattis quis massa at.</p>
@@ -420,9 +421,9 @@
         <div class="mobile-white-bcg">
             <div class="file-example">
                 <div>
-                    <p>Doc type</p><br>
-                    <p>Doc name</p>
-                    <p>Doc name</p>
+                    <p>condition-report.pdf</p><br>
+                    <p>Document</p>
+                    <p>10/04/2021</p>
                 </div>
                 <div>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
@@ -432,9 +433,9 @@
 
             <div class="file-example">
                 <div>
-                    <p>Doc type</p><br>
-                    <p>Doc name</p>
-                    <p>Doc name</p>
+                    <p>insurance.pdf</p><br>
+                    <p>Document</p>
+                    <p>01/04/2021</p>
                 </div>
                 <div>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
@@ -444,9 +445,9 @@
 
             <div class="file-example">
                 <div>
-                    <p>Doc type</p><br>
-                    <p>Doc name</p>
-                    <p>Doc name</p>
+                    <p>land-trade-offer2.pdf</p><br>
+                    <p>Offer</p>
+                    <p>28/03/2021</p>
                 </div>
                 <div>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.25em; color: #002173;"></span>
@@ -490,7 +491,7 @@
                 <div class="message-container">
                     <p class="date">08/04/2021</p>
                     <div class="message-box">
-                        <img src="/img/huskobet-blue-logo.png">
+                        <img src="/img/advisor-img.png">
                             <div class="message-text">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                                 A, felis mattis quis massa at.</p>
