adjustments on home page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="hero-banner">
     <h1><span>A safe family life</span><br>Requires the right housing choice</h1>
     <!-- <img src="/img/hero-banner.jpg" alt="Hero banner img"> -->
-    <button type="submit" class="signup-btn">Become a free member</button>
+    <button type="button" class="signup-btn">Become a free member</button>
 </div>
 
 <div class="home-wrapper">
@@ -151,7 +151,7 @@
             <h2>Gather everything in one place</h2>
             <p>Everything gathered in one place, so you can quickly and easily get an 
                 overview of your housing journey and get dressed to make the right housing choices.</p>
-            <button type="submit" class="signup-btn">Join for free</button>
+            <button type="button" class="signup-btn">Join for free</button>
         </div>
         <div>
         <img src="/img/mackbook.png" alt="Dashboard on macbook screen" style="position: relative;">
@@ -256,7 +256,7 @@
         </div>
     </div>
     <div class="button-container">
-        <button type="submit" class="signup-btn">Join for free</button>
+        <button type="button" class="signup-btn">Join for free</button>
     </div>
 
 <!--  abput us -->
@@ -266,7 +266,7 @@
         <p>Huskøbet is a new and smart service, where you can easily and quickly get an overview of your home buying journey. 
             We are home buyers - for home buyers. The benefits club gathers members and negotiates benefits for all. 
             And best part - being a member is 100% free.</p>
-        <button type="submit" class="signup-btn">Read more</button>
+        <button type="button" class="signup-btn">Read more</button>
     </div>
     <img src="/img/huskobet-partners.png" alt="Huskobet partners">
 </div>
@@ -322,7 +322,7 @@
         <p>If you have any questions, please feel free to contact us. 
             We’ll answer as fast as possible to give you professional 
             help to defeat your concerns.</p>
-        <button type="submit" class="signup-btn">Contact us</button>
+        <button type="button" class="signup-btn">Contact us</button>
     </div>
     <div class="faq-questions">
 
