hopefully final touches

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 </head>
 
 <body>
-<!-- <h2>Hello</h2>
-<a href="dashboard.html">Go to the dashboard</a> -->
 
 <nav class="topnav-home">
     <a href="#"><span class="iconify" data-inline="false" data-icon="carbon:menu"></span></a>
@@ -29,8 +27,7 @@
 
 <div class="hero-banner">
     <h1><span>A safe family life</span><br>Requires the right housing choice</h1>
-    <!-- <img src="/img/hero-banner.jpg" alt="Hero banner img"> -->
-    <button type="button" class="signup-btn">Become a free member</button>
+    <button type="button" class="signup-btn green-button">Become a free member</button>
 </div>
 
 <div class="home-wrapper">
@@ -64,7 +61,7 @@
         </div>
     </div>
 
-<!-- characteristics -->
+<!-- welcome element -->
     <div class="welcome-text">
         <h2>Welcome in Huskobet</h2>
         <h2>Denmark’s largest benefit club for house buyers</h2>
@@ -122,21 +119,18 @@
 <!-- numbers -->
     <div class="numbers-container">
         <div class="number-box">
-            <!-- <div class="value" akhi="450">0</div> -->
             <h2>+450</h2>
             <h3>Helpful articles</h3>
             <p>Get inspiration and good advice from our articles universe</p>
         </div>
 
         <div class="number-box">
-            <!-- <div class="value" akhi="350">0</div> -->
             <h2>+350</h2>
             <h3>Professional advisors</h3>
             <p>Nationwide network of independent buyer advisors</p>
         </div>
 
         <div class="number-box">
-            <!-- <div class="value" akhi="60">0</div> -->
             <h2>+60</h2>
             <h3>Reliable articles</h3>
             <p>Get support in law, insurance, finances and technology</p>
@@ -151,7 +145,7 @@
             <h2>Gather everything in one place</h2>
             <p>Everything gathered in one place, so you can quickly and easily get an 
                 overview of your housing journey and get dressed to make the right housing choices.</p>
-            <button type="button" class="signup-btn">Join for free</button>
+            <button type="button" class="signup-btn green-button">Join for free</button>
         </div>
         <div>
         <img src="/img/mackbook.png" alt="Dashboard on macbook screen" style="position: relative;">
@@ -256,7 +250,7 @@
         </div>
     </div>
     <div class="button-container">
-        <button type="button" class="signup-btn">Join for free</button>
+        <button type="button" class="signup-btn green-button">Join for free</button>
     </div>
 
 <!--  abput us -->
@@ -266,7 +260,7 @@
         <p>Huskøbet is a new and smart service, where you can easily and quickly get an overview of your home buying journey. 
             We are home buyers - for home buyers. The benefits club gathers members and negotiates benefits for all. 
             And best part - being a member is 100% free.</p>
-        <button type="button" class="signup-btn">Read more</button>
+        <button type="button" class="signup-btn blue-button">Read more</button>
     </div>
     <img src="/img/huskobet-partners.png" alt="Huskobet partners">
 </div>
@@ -322,7 +316,7 @@
         <p>If you have any questions, please feel free to contact us. 
             We’ll answer as fast as possible to give you professional 
             help to defeat your concerns.</p>
-        <button type="button" class="signup-btn">Contact us</button>
+        <button type="button" class="signup-btn blue-button">Contact us</button>
     </div>
     <div class="faq-questions">
 
@@ -358,8 +352,6 @@
 </div>
 </div>
 
-
-
 <!-- foter -->
 <footer>
     <img src="/img/huskobet-white-logo.png">
@@ -388,10 +380,6 @@
 <!-- icons -->
 <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
 
-<!-- animate on scroll library -->
-<!-- <script>
-    AOS.init();
-  </script> -->
   
 </body>
 </html>
