--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Huskobet | Home page</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
     <meta name="viewport" content="width-device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Huskobet, home page">
     <meta name="author" content="Aleksandra Wytulany">
@@ -21,7 +21,7 @@
 
 <nav class="topnav-home">
     <a href="#"><span class="iconify" data-inline="false" data-icon="carbon:menu"></span></a>
-    <a href="#"><img src="/img/huskobet-white-logo.png" alt="Huskobet white logo"</a>
+    <a href="#"><img src="./img/huskobet-white-logo.png" alt="Huskobet white logo"</a>
     <a href="dashboard.html"><span class="iconify" data-inline="false" data-icon="carbon:user"></span></a>
 </nav>
 
@@ -148,8 +148,8 @@
             <button type="button" class="signup-btn green-button">Join for free</button>
         </div>
         <div>
-        <img src="/img/mackbook.png" alt="Dashboard on macbook screen" style="position: relative;">
-        <img src="/img/iphone.png" alt="Dashboard on iphone screen">
+        <img src="./img/mackbook.png" alt="Dashboard on macbook screen" style="position: relative;">
+        <img src="./img/iphone.png" alt="Dashboard on iphone screen">
         </div>
     </div>
 </div>
@@ -262,7 +262,7 @@
             And best part - being a member is 100% free.</p>
         <button type="button" class="signup-btn blue-button">Read more</button>
     </div>
-    <img src="/img/huskobet-partners.png" alt="Huskobet partners">
+    <img src="./img/huskobet-partners.png" alt="Huskobet partners">
 </div>
 </div>
 <!-- testimonials -->
@@ -344,17 +344,17 @@
 
 <!-- partners -->
 <div class="partners-container">
-    <img src="/img/bofinans.png" alt="Partner logo">
-    <img src="/img/kaark-logo.png" alt="Partner logo">
-    <img src="/img/lawyer-logo.png" alt="Partner logo">
-    <img src="/img/robinhus-logo.png" alt="Partner logo">
-    <img src="/img/finanse-logo.png" alt="Partner logo">
+    <img src="./img/bofinans.png" alt="Partner logo">
+    <img src="./img/kaark-logo.png" alt="Partner logo">
+    <img src="./img/lawyer-logo.png" alt="Partner logo">
+    <img src="./img/robinhus-logo.png" alt="Partner logo">
+    <img src="./img/finanse-logo.png" alt="Partner logo">
 </div>
 </div>
 
 <!-- foter -->
 <footer>
-    <img src="/img/huskobet-white-logo.png">
+    <img src="./img/huskobet-white-logo.png">
     <div class="footer-links">
         <p>About us</p>
         <p>Contact</p>
