--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Huskobet | Dashboard</title>
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicon.png"/>
+    <link rel="shortcut icon" type="image/jpg" href="./img/favicon.png"/>
     <meta name="viewport" content="width-device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Huskobet, user dashboard">
     <meta name="author" content="Aleksandra Wytulany">
@@ -19,7 +19,7 @@
 
 <!-----side desktop navigation----->
 <nav class="tabbar">
-    <a href="index.html"><img src="/img/huskobet-white-logo.png" alt="Huskobet white logo"></a>
+    <a href="index.html"><img src="./img/huskobet-white-logo.png" alt="Huskobet white logo"></a>
     <a href="#home"><span class="iconify nav-icon" data-inline="false" data-icon="carbon:home"></span>Home</a>
     <a href="#cases"><span class="iconify nav-icon" data-inline="false" data-icon="carbon:folder"></span>Cases</a>
     <a href="#memberclub"><span class="iconify nav-icon" data-inline="false" data-icon="carbon:star"></span>Member club</a>
@@ -29,7 +29,7 @@
 <!-----top desktop navigation----->
 <div class="header">
     <li class="only-mobile"><span class="iconify" data-inline="false" data-icon="carbon:help" style="margin-left: 16px;"></span></li>
-    <img src="/img/huskobet-white-logo.png" alt="Huskobet white logo">
+    <img src="./img/huskobet-white-logo.png" alt="Huskobet white logo">
     <li class="only-mobile"><span class="iconify" data-inline="false" data-icon="carbon:login" style="margin-right: 16px;"></span></li>
     <ul id="navlist">
       <li id="active">User name</li>
@@ -57,30 +57,30 @@
         <div>
             <p class="date">19/04/2021</p>
             <div class="update">
-                <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
+                <img src="./img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
                 <p>Tobias Elmstrøm uploaded new offer regarding Land trade case. Check the offer <span style="font-weight: bold;">here</span> or go to the case.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
+                    <a href="#case-example"><img src="./img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
                 
             </div>
 
             <p class="date">08/04/2021</p>
             <div class="update">
-                <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
+                <img src="./img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
                 <p>You have a new message from Tobias Elmstrøm from Land trade case. Click <span style="font-weight: bold;">here</span> to see the message or go to the case.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
+                    <a href="#case-example"><img src="./img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
             </div>
 
             <p class="date">06/04/2021</p>
             <div class="update">
-                <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
+                <img src="./img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
                 <p>You have successfully uploaded a new document to Land trade case. 
                     Click <span style="font-weight: bold;">here</span> to see it.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
+                    <a href="#case-example"><img src="./img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
             </div>
         </div>
@@ -96,21 +96,21 @@
                 <p><span>Company:</span><br>Grotkjær Elmstrøm</p>
                 <p><span>Advisor:</span><br>Tobias Elmstrøm</p>
                 <div class="active-status">Active</div>
-                <img src="/img/open-icon.svg" alt="Open icon svg">
+                <img src="./img/open-icon.svg" alt="Open icon svg">
             </div></a>
             <div class="case-box">
                 <p><span>Service:</span><br>Financial advise</p>
                 <p><span>Company:</span><br>BoFinans Aarhus</p>
                 <p><span>Advisor:</span><br>Not assigned</p>
                 <div class="pending-status">Pending</div>
-                <img src="/img/open-icon.svg" alt="Open icon svg">
+                <img src="./img/open-icon.svg" alt="Open icon svg">
             </div>
             <div class="case-box">
                 <p><span>Service:</span><br>Construction report</p>
                 <p><span>Company:</span><br>BoTjek</p>
                 <p><span>Advisor:</span><br>Anders Nielsen</p>
                 <div class="active-status">Active</div>
-                <img src="/img/open-icon.svg" alt="Open icon svg">
+                <img src="./img/open-icon.svg" alt="Open icon svg">
         
             </div>
     </div>
@@ -146,7 +146,7 @@
         <div>
             <p class="date">19/04/2021</p>
             <div class="update">
-                <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
+                <img src="./img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
                 <p>Tobias Elmstrøm uploaded new offer regarding Land trade case. Check the offer <span style="font-weight: bold;">here</span> or go to the case.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
                     <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
@@ -156,20 +156,20 @@
 
             <p class="date">08/04/2021</p>
             <div class="update">
-                <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
+                <img src="./img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
                 <p>You have a new message from Tobias Elmstrøm from Land trade case. Click <span style="font-weight: bold;">here</span> to see the message or go to the case.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
+                    <a href="#case-example"><img src="./img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
             </div>
 
             <p class="date">06/04/2021</p>
             <div class="update">
-                <img src="/img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
+                <img src="./img/huskobet-blue-logo.png" alt="Huskobet blue logo" class="huskobet-blue-logo">
                 <p>You have successfully uploaded a new document to Land trade case. 
                     Click <span style="font-weight: bold;">here</span> to see it.<br>
                     <span class="iconify" data-inline="false" data-icon="carbon:trash-can" data-flip="horizontal" style="font-size: 1.5em; color: #002173; float: right;"></span>
-                    <a href="#case-example"><img src="/img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
+                    <a href="#case-example"><img src="./img/open-icon.svg" alt="Open icon svg" style="float: right;"></a>
                 </p>
             </div>
         </div>
@@ -198,18 +198,18 @@
                     <p><span>Service:</span><br>Land trade</p>
                     <p><span>Company:</span><br>Grotkjær Elmstrøm</p>
                     <p style="display: inline-block; margin-bottom: 12px;"><span>Advisor:</span><br>Tobias Elmstrøm</p>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" class="status-mobile" style="float: right; margin: 16px;">
+                    <img src="./img/open-icon.svg" alt="Open icon svg" class="status-mobile" style="float: right; margin: 16px;">
                     <div class="active-status status-desktop">Active</div>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" class="status-desktop">
+                    <img src="./img/open-icon.svg" alt="Open icon svg" class="status-desktop">
                 </div></a>
                 <div class="case-box">
                     <div class="pending-status status-mobile">Pending</div>
                     <p><span>Service:</span><br>Financial advise</p>
                     <p><span>Company:</span><br>BoFinans Aarhus</p>
                     <p style="display: inline-block; margin-bottom: 12px;"><span>Advisor:</span><br>Not assigned</p>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" class="status-mobile" style="float: right; margin: 16px;">
+                    <img src="./img/open-icon.svg" alt="Open icon svg" class="status-mobile" style="float: right; margin: 16px;">
                     <div class="pending-status status-desktop">Pending</div>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" class="status-desktop">
+                    <img src="./img/open-icon.svg" alt="Open icon svg" class="status-desktop">
                 </div>
 
                 <div class="case-box">
@@ -217,9 +217,9 @@
                     <p><span>Service:</span><br>Construction report</p>
                     <p><span>Company:</span><br>BoTjek</p>
                     <p style="display: inline-block; margin-bottom: 12px;"><span>Advisor:</span><br>Anders Nielsen</p>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" class="status-mobile" style="float: right; margin: 16px;">
+                    <img src="./img/open-icon.svg" alt="Open icon svg" class="status-mobile" style="float: right; margin: 16px;">
                     <div class="active-status status-desktop">Active</div>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" class="status-desktop">
+                    <img src="./img/open-icon.svg" alt="Open icon svg" class="status-desktop">
                 </div>
 
                 <div class="case-box">
@@ -227,9 +227,9 @@
                     <p><span>Service:</span><br>Kick-off meeting</p>
                     <p><span>Company:</span><br>BoFinans</p>
                     <p style="display: inline-block; margin-bottom: 12px;"><span>Advisor:</span><br>Jesper Hansen</p>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" class="status-mobile" style="float: right; margin: 16px;">
+                    <img src="./img/open-icon.svg" alt="Open icon svg" class="status-mobile" style="float: right; margin: 16px;">
                     <div class="closed-status status-desktop">Closed</div>
-                    <img src="/img/open-icon.svg" alt="Open icon svg" class="status-desktop">
+                    <img src="./img/open-icon.svg" alt="Open icon svg" class="status-desktop">
                 </div>
             </div>
     </div>
@@ -346,7 +346,7 @@
                         <div class="message-container">
                             <p class="date">08/04/2021</p>
                             <div class="message-box">
-                                <img src="/img/advisor-img.png">
+                                <img src="./img/advisor-img.png">
                                     <div class="message-text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                                         A, felis mattis quis massa at.</p>
@@ -496,7 +496,7 @@
                 <div class="message-container">
                     <p class="date">08/04/2021</p>
                     <div class="message-box">
-                        <img src="/img/advisor-img.png">
+                        <img src="./img/advisor-img.png">
                             <div class="message-text">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                                 A, felis mattis quis massa at.</p>
@@ -535,25 +535,25 @@
                     </div>
                 <div class="horizontal-scroll" style="display: flex;">
                     <div class="discount-example">
-                        <img src="/img/spotify.png" alt="Spotify logo">
+                        <img src="./img/spotify.png" alt="Spotify logo">
                         <p class="discount-headline">Spotify</p>
                         <p style="margin: 0 0 8px 0; height: 56px;">Get free access to premium accoutn for a month</p>
                         <a href="#">Get access</a>
                     </div>
                     <div class="discount-example">
-                        <img src="/img/billetlugen.png" alt="Billetlugen logo">
+                        <img src="./img/billetlugen.png" alt="Billetlugen logo">
                         <p class="discount-headline">Billetlugen</p>
                         <p style="margin: 0 0 8px 0; height: 56px;">30% discount on every event ticket</p>
                         <a href="#">Get access</a>
                     </div>
                     <div class="discount-example">
-                        <img src="/img/duka.png" alt="Duka logo">
+                        <img src="./img/duka.png" alt="Duka logo">
                         <p class="discount-headline">Duka</p>
                         <p style="margin: 0 0 8px 0; height: 56px;">Premium monthly subscription for 99kr</p>
                         <a href="#">Get access</a>
                     </div>
                     <div class="discount-example" style="margin-right: 0;">
-                        <img src="/img/hbo.png" alt="HBO logo">
+                        <img src="./img/hbo.png" alt="HBO logo">
                         <p class="discount-headline">HBO</p>
                         <p style="margin: 0 0 8px 0; height: 56px;">10% discount for first-time subscribers</p>
                         <a href="#">Get access</a>
