flex box on profile

--- a/dashboard.html
+++ b/dashboard.html
@@ -624,6 +624,7 @@
         <div class="profile-box wrapper-mobile">
             <h2>Profile</h2>
                 <!-- Profile nav -->
+                <div class="flex-box-profile">
                 <div class="profile-nav">
                     <div class="profile-element reversed" style="background: #002173;">
                         <h4 style="color: white;"><span class="iconify headline-icon" data-inline="false" data-icon="carbon:identification" style="color: white;"></span>Personal data</h4>
@@ -720,6 +721,7 @@
                     
                   <button type="submit" class="save-button">Save the changes</button>
         
+                </div>
                 </div>
         </div>
 
