--- a/dashboard.html
+++ b/dashboard.html
@@ -29,7 +29,7 @@
 <!-----top desktop navigation----->
 <div class="header">
     <li class="only-mobile"><span class="iconify" data-inline="false" data-icon="carbon:help" style="margin-left: 16px;"></span></li>
-    <img src="./img/huskobet-white-logo.png" alt="Huskobet white logo">
+    <a href="index.html"><img src="./img/huskobet-white-logo.png" alt="Huskobet white logo"></a>
     <li class="only-mobile"><span class="iconify" data-inline="false" data-icon="carbon:login" style="margin-right: 16px;"></span></li>
     <ul id="navlist">
       <li id="active">User name</li>
